tests/fail/namespace-obj2.dit
A {
    String a;
}

A a;

a = ['test'];